--- a/src/NSC.Demo.AspNetCore/NetSwiftClient.Demo.AspNetCore.csproj
+++ b/src/NSC.Demo.AspNetCore/NetSwiftClient.Demo.AspNetCore.csproj
@@ -7,14 +7,11 @@
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="OpenStack.NetCoreSwiftClient" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Views\NewFolder\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NSC\NetSwiftClient.csproj" />
   </ItemGroup>
 
   <ItemGroup>
